# language-model-gateway-configuration

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pre-commit.Dockerfile  pyproject.toml
configs/chat_completions/: bwell_phr.json  claude_3_5.json  create_diagrams.json  creating_images.json  general_purpose.json  javascript_unit_tests.json  parse_web_page.json  prompt_helper.json  provider_search.json  python_coding.json  python_repl.json  python_unit_tests.json  web_search.json  writing_communication.json
configs/chat_completions/official/: claude.json  claude_3_5.json  claude_4_0.json  create_diagrams.json  creating_images.json  general_purpose.json  high_accuracy.json  image_prompt.json  javascript_unit_tests.json  parse_web_page.json  prompt_helper.json  provider_search.json  python_coding.json  python_unit_tests.json  web_search.json  writing_communication.json
configs/chat_completions/testing/: bwell_phr.json  client_connection_creater.json  code_diff_reviewer.json  confluence.json  data_profiling_map_to_fhir.json  fhir_test_data_generator.json  form_filler.json  graphql_query.json  health_summary_generator.json  higher_accuracy.json  product_data_requirements_verification.json  python_repl.json  searchmining_claudehaiku3.json  searchmining_llama1B.json  searchmining_llama3B.json
language_model_gateway_configuration/: validator.py
